--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.0",
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10"
